[package]
name = "rust_graphics_log"
version = "0.1.4"
authors = ["Hossein Noroozpour <hossein.noroozpour@gmail.com>"]
repository = "https://github.com/rust-graphics/rust-graphics-log"
description = "A simple, small and minimal logger."
license = "MIT"
readme = "README.md"
keywords = ["log", "logging", "analytics"]
categories = ["development-tools::debugging"]
