[package]
name = "rust-graphics-log"
version = "0.1.7"
authors = ["Hossein Noroozpour <hossein.noroozpour@gmail.com>"]
repository = "https://github.com/rust-graphics/rust-graphics-log"
description = "A simple, small and minimal logger."
license = "MIT"
readme = "README.md"
keywords = ["log", "logging", "analytics"]
categories = ["development-tools::debugging"]

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "*"
features = [
  'console',
]